--- a/xsum_flanT5_large.ipynb
+++ b/xsum_flanT5_large.ipynb
@@ -134,6 +134,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365,
+          "state": {},
           "referenced_widgets": [
             "1b49447f78854bd786e93114b5b7f9f8",
             "fdd928133bb0450d81ed40bc9ea0e5ec",
