Updatee xsum_flanT5_large.ipynb

--- a/xsum_flanT5_large.ipynb
+++ b/xsum_flanT5_large.ipynb
@@ -153,7 +153,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Default title text\n",
         "from transformers import pipeline\n",
         "from datasets import load_dataset\n",
         "\n",
@@ -162,15 +161,11 @@
         "test_df = test_dataset.to_pandas()\n",
         "\n",
         "def summarize_text(text):\n",
-        "    summarizer = pipeline('text2text-generation', model=model, tokenizer=tokenizer, max_new_tokens=100, do_sample=True, use_cache=True)\n",
+        "    summarizer = pipeline('text2text-generation', model=model, tokenizer=tokenizer, max_new_tokens=100, do_sample=True, use_cache=True, device=0 if torch.cuda.is_available() else -1)\n",
         "    summary = summarizer(text, max_length=512)\n",
         "    return summary[0]['generated_text']\n",
         "\n",
-        "test_df['model_generated'] = test_df['document'].apply(summarize_text)\n",
-        "\n",
-        "# dataset[\"summary\"].append(summary)\n",
-        "\n",
-        "# llm = HuggingFacePipeline(pipeline = pipe, model_kwargs = {'temperature':0.8})"
+        "test_df['model_generated'] = test_df['document'].apply(summarize_text)\n"
       ],
       "metadata": {
         "id": "bIMkZ3kL6EiG"
@@ -181,7 +176,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test_df['model_generated'] = test_df['document'].apply(summarize_text)"
+        "test_df['model_generated'] = test_df['document'].apply(summarize_text)\n"
       ],
       "metadata": {
         "id": "XzENlN78hFjp"
