--- a/xsum_flanT5_large.ipynb
+++ b/xsum_flanT5_large.ipynb
@@ -1,191 +1,182 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/parisa-kavian/Xsum-FlanT5/blob/main/xsum_flanT5_large.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install langchain-community langchain transformers datasets\n"
-      ],
-      "metadata": {
-        "id": "uq_0nEWcgcVL",
-        "outputId": "235cdb06-d8e7-45b1-ebf9-fdbb9d944fbe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting langchain-community\n",
-            "  Downloading langchain_community-0.3.7-py3-none-any.whl.metadata (2.9 kB)\n",
-            "Requirement already satisfied: PyYAML>=5.3 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (6.0.2)\n",
-            "Collecting SQLAlchemy<2.0.36,>=1.4 (from langchain-community)\n",
-            "  Downloading SQLAlchemy-2.0.35-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
-            "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (3.10.10)\n",
-            "Collecting dataclasses-json<0.7,>=0.5.7 (from langchain-community)\n",
-            "  Downloading dataclasses_json-0.6.7-py3-none-any.whl.metadata (25 kB)\n",
-            "Collecting httpx-sse<0.5.0,>=0.4.0 (from langchain-community)\n",
-            "  Downloading httpx_sse-0.4.0-py3-none-any.whl.metadata (9.0 kB)\n",
-            "Requirement already satisfied: langchain<0.4.0,>=0.3.7 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (0.3.7)\n",
-            "Collecting langchain-core<0.4.0,>=0.3.17 (from langchain-community)\n",
-            "  Downloading langchain_core-0.3.18-py3-none-any.whl.metadata (6.3 kB)\n",
-            "Requirement already satisfied: langsmith<0.2.0,>=0.1.125 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (0.1.142)\n",
-            "Requirement already satisfied: numpy<2,>=1 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (1.26.4)\n",
-            "Collecting pydantic-settings<3.0.0,>=2.4.0 (from langchain-community)\n",
-            "  Downloading pydantic_settings-2.6.1-py3-none-any.whl.metadata (3.5 kB)\n",
-            "Requirement already satisfied: requests<3,>=2 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (2.32.3)\n",
-            "Requirement already satisfied: tenacity!=8.4.0,<10,>=8.1.0 in /usr/local/lib/python3.10/dist-packages (from langchain-community) (9.0.0)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (2.4.3)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.3.1)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (24.2.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.5.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (6.1.0)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.17.1)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (4.0.3)\n",
-            "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
-            "  Downloading marshmallow-3.23.1-py3-none-any.whl.metadata (7.5 kB)\n",
-            "Collecting typing-inspect<1,>=0.4.0 (from dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
-            "  Downloading typing_inspect-0.9.0-py3-none-any.whl.metadata (1.5 kB)\n",
-            "Requirement already satisfied: langchain-text-splitters<0.4.0,>=0.3.0 in /usr/local/lib/python3.10/dist-packages (from langchain<0.4.0,>=0.3.7->langchain-community) (0.3.2)\n",
-            "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in /usr/local/lib/python3.10/dist-packages (from langchain<0.4.0,>=0.3.7->langchain-community) (2.9.2)\n",
-            "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /usr/local/lib/python3.10/dist-packages (from langchain-core<0.4.0,>=0.3.17->langchain-community) (1.33)\n",
-            "Requirement already satisfied: packaging<25,>=23.2 in /usr/local/lib/python3.10/dist-packages (from langchain-core<0.4.0,>=0.3.17->langchain-community) (24.2)\n",
-            "Requirement already satisfied: typing-extensions>=4.7 in /usr/local/lib/python3.10/dist-packages (from langchain-core<0.4.0,>=0.3.17->langchain-community) (4.12.2)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from langsmith<0.2.0,>=0.1.125->langchain-community) (0.27.2)\n",
-            "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in /usr/local/lib/python3.10/dist-packages (from langsmith<0.2.0,>=0.1.125->langchain-community) (3.10.11)\n",
-            "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from langsmith<0.2.0,>=0.1.125->langchain-community) (1.0.0)\n",
-            "Collecting python-dotenv>=0.21.0 (from pydantic-settings<3.0.0,>=2.4.0->langchain-community)\n",
-            "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain-community) (3.4.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain-community) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain-community) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2->langchain-community) (2024.8.30)\n",
-            "Requirement already satisfied: greenlet!=0.4.17 in /usr/local/lib/python3.10/dist-packages (from SQLAlchemy<2.0.36,>=1.4->langchain-community) (3.1.1)\n",
-            "Requirement already satisfied: anyio in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (3.7.1)\n",
-            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (1.0.6)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (1.3.1)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (0.14.0)\n",
-            "Requirement already satisfied: jsonpointer>=1.9 in /usr/local/lib/python3.10/dist-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.4.0,>=0.3.17->langchain-community) (3.0.0)\n",
-            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain<0.4.0,>=0.3.7->langchain-community) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain<0.4.0,>=0.3.7->langchain-community) (2.23.4)\n",
-            "Collecting mypy-extensions>=0.3.0 (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community)\n",
-            "  Downloading mypy_extensions-1.0.0-py3-none-any.whl.metadata (1.1 kB)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.10/dist-packages (from yarl<2.0,>=1.12.0->aiohttp<4.0.0,>=3.8.3->langchain-community) (0.2.0)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.2.0,>=0.1.125->langchain-community) (1.2.2)\n",
-            "Downloading langchain_community-0.3.7-py3-none-any.whl (2.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m38.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
-            "Downloading httpx_sse-0.4.0-py3-none-any.whl (7.8 kB)\n",
-            "Downloading langchain_core-0.3.18-py3-none-any.whl (409 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m409.3/409.3 kB\u001b[0m \u001b[31m29.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading pydantic_settings-2.6.1-py3-none-any.whl (28 kB)\n",
-            "Downloading SQLAlchemy-2.0.35-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m58.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading marshmallow-3.23.1-py3-none-any.whl (49 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.5/49.5 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-            "Downloading typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
-            "Downloading mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
-            "Installing collected packages: SQLAlchemy, python-dotenv, mypy-extensions, marshmallow, httpx-sse, typing-inspect, pydantic-settings, dataclasses-json, langchain-core, langchain-community\n",
-            "  Attempting uninstall: SQLAlchemy\n",
-            "    Found existing installation: SQLAlchemy 2.0.36\n",
-            "    Uninstalling SQLAlchemy-2.0.36:\n",
-            "      Successfully uninstalled SQLAlchemy-2.0.36\n",
-            "  Attempting uninstall: langchain-core\n",
-            "    Found existing installation: langchain-core 0.3.15\n",
-            "    Uninstalling langchain-core-0.3.15:\n",
-            "      Successfully uninstalled langchain-core-0.3.15\n",
-            "Successfully installed SQLAlchemy-2.0.35 dataclasses-json-0.6.7 httpx-sse-0.4.0 langchain-community-0.3.7 langchain-core-0.3.18 marshmallow-3.23.1 mypy-extensions-1.0.0 pydantic-settings-2.6.1 python-dotenv-1.0.1 typing-inspect-0.9.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Import Model"
-      ],
-      "metadata": {
-        "id": "50Wgz7FU9tmM"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
-        "\n",
-        "model = AutoModelForSeq2SeqLM.from_pretrained('google/flan-t5-large', trust_remote_code=True)\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"google/flan-t5-large\")\n"
-      ],
-      "metadata": {
-        "id": "z8o1UCLi5xXO",
-        "outputId": "b98213a4-edca-4a07-9282-d9f655932b8a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from transformers import pipeline\n",
-        "from datasets import load_dataset\n",
-        "\n",
-        "dataset = load_dataset('xsum', trust_remote_code=True)\n",
-        "test_dataset = dataset['test']\n",
-        "test_df = test_dataset.to_pandas()\n",
-        "\n",
-        "def summarize_text(text):\n",
-        "    summarizer = pipeline('text2text-generation', model=model, tokenizer=tokenizer, max_new_tokens=100, do_sample=True, use_cache=True, device=0 if torch.cuda.is_available() else -1)\n",
-        "    summary = summarizer(text, max_length=512)\n",
-        "    return summary[0]['generated_text']\n",
-        "\n",
-        "test_df['model_generated'] = test_df['document'].apply(summarize_text)\n"
-      ],
-      "metadata": {
-        "id": "bIMkZ3kL6EiG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test_df['model_generated'] = test_df['document'].apply(summarize_text)\n"
-      ],
-      "metadata": {
-        "id": "XzENlN78hFjp"
-      },
-      "execution_count": null,
-      "outputs": []
-    }
-  ],
-  "metadata": {},
-  "nbformat": 4,
-  "nbformat_minor": 0
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "view-in-github",
+    "colab_type": "text"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/parisa-kavian/Xsum-FlanT5/blob/main/xsum_flanT5_large.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "!pip install langchain-community langchain transformers datasets rouge bert-score"
+   ],
+   "metadata": {
+    "id": "uq_0nEWcgcVL"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 1. Import Libraries and Load Model"
+   ],
+   "metadata": {
+    "id": "50Wgz7FU9tmM"
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "from transformers import pipeline, AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the model and tokenizer\n",
+    "model_name = 'google/flan-t5-large'\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
+   ],
+   "metadata": {
+    "id": "z8o1UCLi5xXO"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 2. Load Dataset"
+   ],
+   "metadata": {
+    "id": "bIMkZ3kL6EiG-markdown"
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "dataset = load_dataset('xsum', trust_remote_code=True)\n",
+    "test_dataset = dataset['test']\n",
+    "test_df = test_dataset.to_pandas()\n",
+    "\n",
+    "# Display the first few rows to verify\n",
+    "print(\"Dataset loaded successfully. Here are the first 5 rows:\")\n",
+    "test_df.head()"
+   ],
+   "metadata": {
+    "id": "bIMkZ3kL6EiG"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 3. Generate Summaries"
+   ],
+   "metadata": {
+    "id": "generate-summaries-markdown"
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Create a text generation pipeline\n",
+    "summarizer = pipeline('text2text-generation', model=model, tokenizer=tokenizer, device=0) # Use device=0 for GPU\n",
+    "\n",
+    "# Define a function to generate summary for a single text\n",
+    "def generate_summary(text):\n",
+    "    # The pipeline returns a list of dictionaries\n",
+    "    summary_output = summarizer(text, max_length=150, min_length=30, do_sample=False)\n",
+    "    return summary_output[0]['generated_text']\n",
+    "\n",
+    "# Take a smaller sample for faster processing (e.g., first 25 rows)\n",
+    "num_samples = 25\n",
+    "sample_df = test_df.head(num_samples).copy() # Use .copy() to avoid SettingWithCopyWarning\n",
+    "\n",
+    "# Apply the function to the 'document' column\n",
+    "# This will take some time to run\n",
+    "print(f\"Generating summaries for the first {num_samples} articles...\")\n",
+    "sample_df['model_generated'] = sample_df['document'].apply(generate_summary)\n",
+    "\n",
+    "print(\"Summaries generated successfully!\")\n",
+    "sample_df[['summary', 'model_generated']].head()"
+   ],
+   "metadata": {
+    "id": "XzENlN78hFjp"
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 4. Evaluation Metrics (Rouge, Bleu, BERTScore)"
+   ],
+   "metadata": {
+    "id": "aQg30Dwz-ejr"
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "from rouge import Rouge\n",
+    "from nltk.translate.bleu_score import corpus_bleu\n",
+    "from bert_score import score\n",
+    "\n",
+    "# Prepare the generated and reference summaries\n",
+    "generated_summaries = sample_df['model_generated'].tolist()\n",
+    "reference_summaries = sample_df['summary'].tolist()\n",
+    "\n",
+    "# --- ROUGE Score ---\n",
+    "rouge = Rouge()\n",
+    "rouge_scores = rouge.get_scores(generated_summaries, reference_summaries, avg=True)\n",
+    "print(\"--- ROUGE Scores ---\")\n",
+    "print(rouge_scores)\n",
+    "\n",
+    "# --- BLEU Score ---\n",
+    "# BLEU score requires tokenized text, so we split strings into lists of words\n",
+    "reference_bleu = [[text.split()] for text in reference_summaries]\n",
+    "generated_bleu = [text.split() for text in generated_summaries]\n",
+    "bleu_score = corpus_bleu(reference_bleu, generated_bleu)\n",
+    "print(\"\\n--- BLEU Score ---\")\n",
+    "print(f\"BLEU Score: {bleu_score}\")\n",
+    "\n",
+    "# --- BERTScore ---\n",
+    "P, R, F1 = score(generated_summaries, reference_summaries, lang=\"en\", verbose=True)\n",
+    "print(\"\\n--- BERTScore ---\")\n",
+    "print(f\"BERT Precision: {P.mean().item():.4f}\")\n",
+    "print(f\"BERT Recall: {R.mean().item():.4f}\")\n",
+    "print(f\"BERT F1 Score: {F1.mean().item():.4f}\")"
+   ],
+   "metadata": {
+    "id": "sXdYqU9YG5RK"
+   },
+   "execution_count": null,
+   "outputs": []
+  }
+ ],
+ "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "gpuType": "T4",
+   "provenance": [],
+   "authorship_tag": "ABX9TyNdGnqi3t0dZ/vgYq5zvpwr",
+   "include_colab_link": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
